update distributed trans and JWT